--- a/src/patterns/SearchForm/SearchForm.html
+++ b/src/patterns/SearchForm/SearchForm.html
@@ -14,175 +14,10 @@
       <div class="underline" />
     </a>
   </nav>
-
-  <!-- dogs -->
-  <section v-if="sections[sectionIndex].display === 'Dogs'">
-    <TextInput
-      v-model="fields.zipcode"
-      :validations="validations.location"
-      label="Zip / Postal or City, State"
-      size="small" />
-    <Dropdown
-      v-model="fields.distance"
-      :items="distances"
-      label="Distance"
-      size="small" />
-    <Dropdown
-      v-model="fields.breedId"
-      :items="breeds"
-      :search="true"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Breed"
-      size="small" />
-    <Dropdown
-      v-model="fields.sex"
-      :items="sexes"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Sex"
-      size="small" />
-    <Dropdown
-      v-model="fields.sizeId"
-      :items="sizes"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Size"
-      size="small" />
-    <Dropdown
-      v-model="fields.color"
-      :items="colors"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Color"
-      size="small" />
-    <Dropdown
-      v-model="fields.age"
-      :items="ages"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Age"
-      size="small" />
-  </section>
-
-  <!-- cats -->
-  <section v-if="sections[sectionIndex].display === 'Cats'">
-    <TextInput
-      v-model="fields.zipcode"
-      label="Zip / Postal or City, State"
-      size="small" />
-    <Dropdown
-      v-model="fields.distance"
-      :items="distances"
-      label="Distance"
-      size="small" />
-    <Dropdown
-      v-model="fields.breedId"
-      :items="breeds"
-      :search="true"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Breed"
-      size="small" />
-    <Dropdown
-      v-model="fields.sex"
-      :items="sexes"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Sex"
-      size="small" />
-    <Dropdown
-      v-model="fields.colorId"
-      :items="colors"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Color"
-      size="small" />
-    <Dropdown
-      v-model="fields.hairId"
-      :items="hair"
-      :special-choices="[{ display: 'Any', value: '' }]"
-      label="Hair"
-      size="small" />
-    <Dropdown
-      v-model="fields.age"
-      :items="ages"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Age"
-      size="small" />
-  </section>
-
-  <!-- others -->
-  <section v-if="sections[sectionIndex].display === 'Others'">
-    <Dropdown
-      v-model="fields.clanId"
-      :items="clans"
-      :special-choices="[{ display: 'Any', value: null }]"
-      label="Others"
-      size="small"
-      @change="changeSubsection(fields.clanId)" />
-
-    <!-- Rabbits -->
-    <section v-if="fields.clanId === 3">
-      <TextInput
-        v-model="fields.zipcode"
-        label="Zip / Postal or City, State"
-        size="small" />
-      <Dropdown
-        v-model="fields.distance"
-        :items="distances"
-        label="Distance"
-        size="small" />
-      <Dropdown
-        v-model="fields.sex"
-        :items="sexes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Sex"
-        size="small" />
-      <Dropdown
-        v-model="fields.sizeId"
-        :items="sizes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Size"
-        size="small" />
-      <Dropdown
-        v-model="fields.age"
-        :items="ages"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Age"
-        size="small" />
-    </section>
-
-    <!-- Small Animals -->
-    <section v-if="fields.clanId === 4">
-      <TextInput
-        v-model="fields.zipcode"
-        label="Zip / Postal or City, State"
-        size="small" />
-      <Dropdown
-        v-model="fields.distance"
-        :items="distances"
-        label="Distance"
-        size="small" />
-      <Dropdown
-        v-model="fields.breedId"
-        :items="breeds"
-        :search="true"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Species"
-        size="small" />
-      <Dropdown
-        v-model="fields.sex"
-        :items="sexes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Sex"
-        size="small" />
-      <Dropdown
-        v-model="fields.age"
-        :items="ages"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Age"
-        size="small" />
-    </section>
-
-    <!-- Birds -->
-    <section v-if="fields.clanId === 5">
-      <TextInput
-        v-model="fields.zipcode"
-        label="Zip / Postal or City, State"
-        size="small" />
+  <ValidatedForm :names="['location']" @submit="submitForm">
+    <!-- dogs -->
+    <section v-if="sections[sectionIndex].display === 'Dogs'">
+      <LocationInput v-model="fields.zipcode" :required="true" name="location" size="small" />
       <Dropdown
         v-model="fields.distance"
         :items="distances"
@@ -207,10 +42,22 @@
         :special-choices="[{ display: 'Any', value: null }]"
         label="Size"
         size="small" />
+      <Dropdown
+        v-model="fields.color"
+        :items="colors"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Color"
+        size="small" />
+      <Dropdown
+        v-model="fields.age"
+        :items="ages"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Age"
+        size="small" />
     </section>
 
-    <!-- Horses -->
-    <section v-if="fields.clanId === 6">
+    <!-- cats -->
+    <section v-if="sections[sectionIndex].display === 'Cats'">
       <TextInput
         v-model="fields.zipcode"
         label="Zip / Postal or City, State"
@@ -227,8 +74,53 @@
         :special-choices="[{ display: 'Any', value: null }]"
         label="Breed"
         size="small" />
-      <Checkbox v-model="includeMixes">Include Mixes</Checkbox>
-      <div v-if="includeMixes">
+      <Dropdown
+        v-model="fields.sex"
+        :items="sexes"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Sex"
+        size="small" />
+      <Dropdown
+        v-model="fields.colorId"
+        :items="colors"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Color"
+        size="small" />
+      <Dropdown
+        v-model="fields.hairId"
+        :items="hair"
+        :special-choices="[{ display: 'Any', value: '' }]"
+        label="Hair"
+        size="small" />
+      <Dropdown
+        v-model="fields.age"
+        :items="ages"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Age"
+        size="small" />
+    </section>
+
+    <!-- others -->
+    <section v-if="sections[sectionIndex].display === 'Others'">
+      <Dropdown
+        v-model="fields.clanId"
+        :items="clans"
+        :special-choices="[{ display: 'Any', value: null }]"
+        label="Others"
+        size="small"
+        @change="changeSubsection(fields.clanId)" />
+
+      <!-- Rabbits -->
+      <section v-if="fields.clanId === 3">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
         <Dropdown
           v-model="fields.sex"
           :items="sexes"
@@ -242,10 +134,36 @@
           label="Size"
           size="small" />
         <Dropdown
-          v-model="fields.color"
-          :items="colors"
+          v-model="fields.age"
+          :items="ages"
           :special-choices="[{ display: 'Any', value: null }]"
-          label="Color"
+          label="Age"
+          size="small" />
+      </section>
+
+      <!-- Small Animals -->
+      <section v-if="fields.clanId === 4">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
+        <Dropdown
+          v-model="fields.breedId"
+          :items="breeds"
+          :search="true"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Species"
+          size="small" />
+        <Dropdown
+          v-model="fields.sex"
+          :items="sexes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Sex"
           size="small" />
         <Dropdown
           v-model="fields.age"
@@ -253,72 +171,151 @@
           :special-choices="[{ display: 'Any', value: null }]"
           label="Age"
           size="small" />
-      </div>
-    </section>
+      </section>
 
-    <!-- Reptiles, Amphibians, and/or Fish -->
-    <section v-if="fields.clanId === 7">
-      <TextInput
-        v-model="fields.zipcode"
-        label="Zip / Postal or City, State"
-        size="small" />
-      <Dropdown
-        v-model="fields.distance"
-        :items="distances"
-        label="Distance"
-        size="small" />
-      <Dropdown
-        v-model="fields.breedId"
-        :items="breeds"
-        :search="true"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Species"
-        size="small" />
-      <Dropdown
-        v-model="fields.sizeId"
-        :items="sizes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Size"
-        size="small" />
-    </section>
+      <!-- Birds -->
+      <section v-if="fields.clanId === 5">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
+        <Dropdown
+          v-model="fields.breedId"
+          :items="breeds"
+          :search="true"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Breed"
+          size="small" />
+        <Dropdown
+          v-model="fields.sex"
+          :items="sexes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Sex"
+          size="small" />
+        <Dropdown
+          v-model="fields.sizeId"
+          :items="sizes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Size"
+          size="small" />
+      </section>
 
-    <!-- Reptiles, Amphibians, and/or Fish -->
-    <section v-if="fields.clanId === 8">
-      <TextInput
-        v-model="fields.zipcode"
-        label="Zip / Postal or City, State"
-        size="small" />
-      <Dropdown
-        v-model="fields.distance"
-        :items="distances"
-        label="Distance"
-        size="small" />
-      <Dropdown
-        v-model="fields.breedId"
-        :items="breeds"
-        :search="true"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Species"
-        size="small" />
-      <Dropdown
-        v-model="fields.sex"
-        :items="sexes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Sex"
-        size="small" />
-      <Dropdown
-        v-model="fields.sizeId"
-        :items="sizes"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Size"
-        size="small" />
-      <Dropdown
-        v-model="fields.age"
-        :items="ages"
-        :special-choices="[{ display: 'Any', value: null }]"
-        label="Age"
-        size="small" />
+      <!-- Horses -->
+      <section v-if="fields.clanId === 6">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
+        <Dropdown
+          v-model="fields.breedId"
+          :items="breeds"
+          :search="true"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Breed"
+          size="small" />
+        <Checkbox v-model="includeMixes">Include Mixes</Checkbox>
+        <div v-if="includeMixes">
+          <Dropdown
+            v-model="fields.sex"
+            :items="sexes"
+            :special-choices="[{ display: 'Any', value: null }]"
+            label="Sex"
+            size="small" />
+          <Dropdown
+            v-model="fields.sizeId"
+            :items="sizes"
+            :special-choices="[{ display: 'Any', value: null }]"
+            label="Size"
+            size="small" />
+          <Dropdown
+            v-model="fields.color"
+            :items="colors"
+            :special-choices="[{ display: 'Any', value: null }]"
+            label="Color"
+            size="small" />
+          <Dropdown
+            v-model="fields.age"
+            :items="ages"
+            :special-choices="[{ display: 'Any', value: null }]"
+            label="Age"
+            size="small" />
+        </div>
+      </section>
+
+      <!-- Reptiles, Amphibians, and/or Fish -->
+      <section v-if="fields.clanId === 7">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
+        <Dropdown
+          v-model="fields.breedId"
+          :items="breeds"
+          :search="true"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Species"
+          size="small" />
+        <Dropdown
+          v-model="fields.sizeId"
+          :items="sizes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Size"
+          size="small" />
+      </section>
+
+      <!-- Reptiles, Amphibians, and/or Fish -->
+      <section v-if="fields.clanId === 8">
+        <TextInput
+          v-model="fields.zipcode"
+          label="Zip / Postal or City, State"
+          size="small" />
+        <Dropdown
+          v-model="fields.distance"
+          :items="distances"
+          label="Distance"
+          size="small" />
+        <Dropdown
+          v-model="fields.breedId"
+          :items="breeds"
+          :search="true"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Species"
+          size="small" />
+        <Dropdown
+          v-model="fields.sex"
+          :items="sexes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Sex"
+          size="small" />
+        <Dropdown
+          v-model="fields.sizeId"
+          :items="sizes"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Size"
+          size="small" />
+        <Dropdown
+          v-model="fields.age"
+          :items="ages"
+          :special-choices="[{ display: 'Any', value: null }]"
+          label="Age"
+          size="small" />
+      </section>
     </section>
-  </section>
-  <Button @submit="">Submit</Button>
+    <Button>Submit</Button>
+  </ValidatedForm>
 </div>
