HB-4883: syntax fixes for new components from Singularity

--- a/src/patterns/ModalBack/modalBack.html
+++ b/src/patterns/ModalBack/modalBack.html
@@ -1,4 +1,5 @@
-<TextLink class="back"
+<TextLink :class="b().toString()"
+  class="back"
   @click="$emit('click')">
   <Icon name="angle-left"
     width="11px"
