--- a/src/patterns/PasswordForgot/passwordForgot.html
+++ b/src/patterns/PasswordForgot/passwordForgot.html
@@ -1,4 +1,4 @@
-<div>
+<div :class="b().toString()">
   <section v-if="section === 'initial'">
     <Heading class="h1"
       level="h1">Forgot Password?
