--- a/src/patterns/Pagination/Pagination.html
+++ b/src/patterns/Pagination/Pagination.html
@@ -7,21 +7,21 @@
       @click="changePage('backward')" />
     <span class="pages"
       @click="popupIsOpen = !popupIsOpen">
-      page {{ page }} of {{ pageCount }}
-      <Popup class="pet-results-popup"
-        v-if="popupIsOpen">
-        <ul>
-          <li v-for="p of pages">
-            <a v-bind:class="{ active: p == page }"
-              @click="changePage(null, p)">
-              <span>page {{ p }}</span>
-            </a>
-            <Icon v-if="p == page"
-              name="check" />
-          </li>
-        </ul>
-      </Popup>
+      Page {{ page }} of {{ pageCount }}
     </span>
+    <Popup class="pet-results-popup"
+      v-if="popupIsOpen">
+      <ul>
+        <li v-for="p of pages">
+          <a v-bind:class="{ active: p == page }"
+            @click="changePage(null, p)">
+            <span>Page {{ p }}</span>
+          </a>
+          <Icon v-if="p == page"
+            name="check" />
+        </li>
+      </ul>
+    </Popup>
     <Icon v-bind:class="{ 'si-disabled': page === pageCount || loading }"
       class="si-cursor-pointer"
       height="18px"
