--- a/src/patterns/Pagination/Pagination.html
+++ b/src/patterns/Pagination/Pagination.html
@@ -5,23 +5,22 @@
       height="18px"
       name="angle-left"
       @click="changePage('backward')" />
-    <span class="pages"
-      @click="popupIsOpen = !popupIsOpen">
-      Page {{ page }} of {{ pageCount }}
-    </span>
-    <Popup class="pet-results-popup"
-      v-if="popupIsOpen">
-      <ul>
-        <li v-for="p of pages">
-          <a v-bind:class="{ active: p == page }"
-            @click="changePage(null, p)">
-            <span>Page {{ p }}</span>
-          </a>
-          <Icon v-if="p == page"
-            name="check" />
-        </li>
-      </ul>
-    </Popup>
+    <div class="pages">
+      <span @click="popupIsOpen = !popupIsOpen">Page {{ page }} of {{ pageCount }}</span>
+      <Popup class="pet-results-popup"
+        v-if="popupIsOpen">
+        <ul>
+          <li v-for="p of pages">
+            <a v-bind:class="{ active: p == page }"
+              @click="changePage(null, p)">
+              <span>Page {{ p }}</span>
+            </a>
+            <Icon v-if="p == page"
+              name="check" />
+          </li>
+        </ul>
+      </Popup>
+    </div>
     <Icon v-bind:class="{ 'si-disabled': page === pageCount || loading }"
       class="si-cursor-pointer"
       height="18px"
