HB-5098: searched and replaced font values

--- a/src/patterns/SearchForm/SearchForm.html
+++ b/src/patterns/SearchForm/SearchForm.html
@@ -1,7 +1,7 @@
 <div :class="b().toString()">
   <Heading
     level="h3"
-    font-family="museo"
+    font-family="special"
     font-weight="bold">
     Find a Pet to Adopt
   </Heading>
