HB-5006: add event to pet card

--- a/src/patterns/PetCard/PetCard.html
+++ b/src/patterns/PetCard/PetCard.html
@@ -1,5 +1,7 @@
 <div :class="b().toString()">
-  <a :href="href">
+  <a
+    :href="href"
+    @click="petCardClick">
     <img v-if="pet.image"
       :src="pet.image" />
     <span v-if="!pet.image">
