--- a/src/patterns/LoginForm/loginForm.html
+++ b/src/patterns/LoginForm/loginForm.html
@@ -55,7 +55,8 @@
         <Button type="submit">Login</Button>
       </ValidatedForm>
       <VSpacer size="xxs" />
-      <Paragraph font-size="s">
+      <Paragraph class="login-meta"
+        font-size="s">
         Forgot your password or email isn't working? <TextLink @click="changeSection('passwordForgot')"><strong>Click here.</strong></TextLink><br>
         Rehome member? <TextLink href="https://rehome.adoptapet.com/auth/login">Log in here</TextLink>.
       </Paragraph>
