HB-5116: more rebranding style updates

--- a/src/patterns/PasswordForgot/PasswordForgot.html
+++ b/src/patterns/PasswordForgot/PasswordForgot.html
@@ -1,7 +1,7 @@
 <div :class="b().toString()">
   <section v-if="section === 'initial'">
     <Heading class="h1"
-      level="h1">Forgot Password?
+      level="h1">Forgot your password?
     </Heading>
     <div class="grid">
       <div>
