--- a/src/patterns/LoginForm/loginForm.html
+++ b/src/patterns/LoginForm/loginForm.html
@@ -56,7 +56,8 @@
       </ValidatedForm>
       <VSpacer size="xxs" />
       <Paragraph class="login-meta"
-        font-size="s">
+        font-size="s"
+        text-align="center">
         Forgot your password or email isn't working? <TextLink @click="changeSection('passwordForgot')"><strong>Click here.</strong></TextLink><br>
         Rehome member? <TextLink href="https://rehome.adoptapet.com/auth/login">Log in here</TextLink>.
       </Paragraph>
