GD-123: 1.12. Replace submit button text with search

--- a/src/patterns/SearchForm/SearchForm.html
+++ b/src/patterns/SearchForm/SearchForm.html
@@ -357,6 +357,6 @@
           size="small" />
       </section>
     </section>
-    <Button class="submit">Submit</Button>
+    <Button class="submit">Search</Button>
   </ValidatedForm>
 </div>
